--- a/Dev/oldIndex.html
+++ b/Dev/oldIndex.html
@@ -16,7 +16,7 @@
   <!-- FavIcon-->
   <link rel="shortcut icon" href="favicon.ico">
   <link rel="apple-touch-icon" href="favicon.ico">
-
+<!-- An Open Source community that started from people's need for a place where self-taught developers could ask questions, collaborate, and learn new technologies together in a professional environment. -->
 
 </head>
 <body>
