--- a/Dev/index.html
+++ b/Dev/index.html
@@ -7,7 +7,15 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Devvit.io</title>
   <link href="img/favicon.ico" rel="icon">
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-32870014-10"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'UA-32870014-10');
+</script>
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css  ">
   <link rel="stylesheet" href="css/style.css">
